Add Category: Kiro tasks 2-10 auto execution (22/100 tokens, mvn,dir autoapproved)